--- a/src/app/components/timesheet/timesheet.component.scss
+++ b/src/app/components/timesheet/timesheet.component.scss
@@ -4,4 +4,57 @@ h2 {
 
 .cards {
     margin: auto;
+    padding: 10px;
+}
+
+.inputCard {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+}
+
+mat-form-field {
+    width: 100%;
+    
+}
+
+.hours {
+    min-height: 200px;
+    margin-top: 30px;
+    padding: 15px ;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.hours-input {
+    max-width: 75px;
+    margin-left: 15px;
+    text-align: center;
+}
+
+.total-cell {
+    text-align: center;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+th {
+    border-bottom: 1px solid black;
+
+    &:not(:first-child) {
+        padding-left: 15px;
+    }
+}
+
+td {
+    text-align: center;
+    padding: 10px 0px;
+}
+
+tr td {
+    border-bottom:1pt solid #C1C1C1;
 }
